ext/standard/basic_functions.c
@@ -3754,6 +3754,8 @@ PHP_RINIT_FUNCTION(basic) /* {{{ */
 	/* Default to global filters only */
 	FG(stream_filters) = NULL;
 
+	FG(wrapper_errors) = NULL;
+
 	return SUCCESS;
 }
 /* }}} */
